naming conflict with pandas and polars dataframe both named df

--- a/example-notebooks/Solara-Buckaroo.ipynb
+++ b/example-notebooks/Solara-Buckaroo.ipynb
@@ -81,10 +81,10 @@
    "source": [
     "import polars as pl\n",
     "from buckaroo.solara_buckaroo import SolaraPolarsDFViewer, SolaraPolarsBuckarooWidget\n",
-    "df = pl.DataFrame({'a':[10,20]})\n",
+    "pldf = pl.DataFrame({'a':[10,20]})\n",
     "@solara.component\n",
     "def Page():\n",
-    "    bw = SolaraPolarsDFViewer(df=df, pinned_rows=[])\n",
+    "    bw = SolaraPolarsDFViewer(df=pldf, pinned_rows=[])\n",
     "display(Page())"
    ]
   },
@@ -130,6 +130,18 @@
    "source": [
     "# Building an app around SolaraDFViewer\n",
     "The following app hardcodes two dataframes and lets you select between them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdad4bd4-47c9-444a-b982-63e21faea249",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
